stackdriver/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gcptest-service
  name: gcptest-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: gcptest
  sessionAffinity: None
  type: LoadBalancer
